# parquet-fe-prototype

./: .gitignore  Dockerfile  Makefile  README.md  build.js  docker-compose.yml  envfile-template  package-lock.json  package.json  pqlist  pyproject.toml  tsconfig.json
migrations/versions/: 0309db1e86c0_make_username_non_unique.py  de00b5a84172_initial_user_model.py  fc78dcef5f42_add_auth0_id.py
parquet-fe-prototype/: __init__.py
parquet_fe_prototype/: __init__.py  dash.py  datapackage_shim.py  duckdb_query.py  models.py  search.py  utils.py
parquet_fe_prototype/internal/: pudl_datapackage.json
parquet_fe_prototype/pages/: __init__.py  dummy_graph.py  home.py  private_graph.py
parquet_fe_prototype/templates/: base.html  preview.html  search.html
parquet_fe_prototype/templates/partials/: filter_manager.html  navbar.html  search_results.html
src/: constants.ts  index.css  index.html  index.js  index.ts
tests/: test_duckdb_query.py  test_utils.py
