[project]
name = "parquet-fe-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-htmx>=0.4.0",
    "flask>=3.1.0",
    "frictionless>=5.18.0",
    "pyyaml>=6.0.2",
    "whoosh>=2.7.4",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "duckdb>=1.1.3",
    "hypothesis>=6.122.5",
]
