[project]
name = "parquet-fe-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-htmx>=0.4.0",
    "flask>=3.1.0",
    "frictionless>=5.18.0",
    "pyyaml>=6.0.2",
    "whoosh>=2.7.4",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "duckdb>=1.1.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.7",
    "psycopg2-binary>=2.9.10",
    "authlib>=1.4.0",
    "docutils>=0.21.2",
    "structlog>=25.1.0",
]
